--- a/root/static/css/ct_desktop.css
+++ b/root/static/css/ct_desktop.css
@@ -95,9 +95,11 @@ background: #5568A3 none repeat scroll 0% ;
 min-width:40px;
 }
 
-.sf-menu, .sf-menu * {
-#margin-left: 10px;
-#margin-right: 10px;
+.sf-menu > li {
+    padding-right: 20px!important;
+}
+.sf-menu > li:nth-last-child(1) {
+    padding-right: 0!important;
 }
 
 .sf-menu {
